--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 <style>
-    input {
+    input:hover {
         border: none;
         border-bottom: 1.7px solid black;
         outline: none;
