--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -1,10 +1,14 @@
 <link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 <style>
+    input {
+        outline: none;
+        border: none;
+        font-size: 19;
+    }
+    
     input:hover {
         border: none;
         border-bottom: 1.7px solid black;
-        outline: none;
-        font-size: medium;
     }
 </style>
 <div id="update-profile">
