--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -130,7 +130,7 @@ header {
         outline: none !important;
         border: none !important;
         &:hover {
-            outline: 1px solid aqua;
+            outline: 1px solid aqua !important;
         }
     }
 }
