--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -131,7 +131,7 @@ header {
         border: none !important;
         &:hover {
             cursor: pointer;
-            border: 1px solid aqua !important;
+            border: 1.8px solid rgb(0, 255, 221) !important;
         }
     }
 }
