--- a/views/layouts/organiser_layout.ejs
+++ b/views/layouts/organiser_layout.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="\uploads\icons/18.logo.png" style="background-color: inherit; height: 150px; width: 150px" />
+    <link rel="icon" type="image/x-icon" href="\uploads\icons/cl_logo.jpg" style="background-color: inherit; height: 150px; width: 150px" />
 
     <meta name="viewport" content="width=device-width,initial-scale:1,height:device-height" />
     <meta charset="UTF-8" />
