--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -39,7 +39,7 @@
     <div class="left-div">
         <div>
             <a href="/">
-                <img height="40px" width="40px" src="\uploads\icons/cl_logo.jpg" alt="logo" />
+                <img style="border-radius: 4px" height="40px" width="40px" src="\uploads\icons/cl_logo.jpg" alt="logo" />
             </a>
         </div>
         <!-- <div style="display: flex; flex-direction: column">
