--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -4,7 +4,7 @@
     <title>
         <%=locals.title%>
     </title>
-    <link rel="icon" type="image/x-icon" href="\uploads\icons/cl_logo.jpg" style="background-color: inherit; height: 150px; width: 150px" />
+    <link rel="icon" type="image/x-icon" href="http://chitkaralive.com/uploads/icons/cl_logo.jpg" style="background-color: inherit; height: 150px; width: 150px" />
     <meta name="viewport" content="width=device-width,initial-scale:1, height:device-height" />
     <meta charset="UTF-8" />
     <meta name="keywords" content="CU, cu , chitkara , chitkara_live, chitkara live ,chitkara live home ,cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
