--- a/views/mailers/request/creator_account_activate_link.ejs
+++ b/views/mailers/request/creator_account_activate_link.ejs
@@ -8,8 +8,9 @@
   ">
         <%-include('../mail_header');-%>
             <h4 style="text-align: center; color: cyan">
-                Link To Activate New
-                <%=obj.data.type%> Account
+                Link To Activate
+                <%=obj.data.name%> (
+                    <%=obj.data.type%>) Account
             </h4>
             <div>
                 <span>Hi <%=obj.data.name%>,</span>
