--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -12,7 +12,7 @@
       ">
             <div>
                 <a href="/">
-                    <img src="uploads/icons/18.logo.png" alt="logo" style="background-color: inherit; height: 50px; width: 50px" />
+                    <img src="http://chitkaralive.com/uploads/icons/cl_logo.jpg" alt="logo" style="background-color: inherit; height: 50px; width: 50px" />
                 </a>
             </div>
 
