--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -98,7 +98,7 @@
       </div>
       <div class="big-finger"></div>
     </div>
-    <!-- </div> -->
+
     <div id="slide-container">
       <div id="login-form">
         <!-- Get Otp by email -->
@@ -126,7 +126,7 @@
           "
         >
           <img
-            src="\uploads\icons/8.google-logo-png-icon-free-download.png"
+            src="http://chitkaralive.com/uploads/icons/8.google-logo-png-icon-free-download.png"
             alt="logo"
             height="40px"
             width="40px"
