--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -379,11 +379,12 @@
         }
         .forgot-link {
             position: relative;
-            right: 0px;
-            text-align: right;
+            right: 0px !important;
+            text-align: right !important;
             margin: 0px;
             color: royalblue;
             padding: 2px;
+            width: fit-content;
             &:hover {
                 text-decoration: underline;
                 cursor: pointer;
