--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -379,8 +379,10 @@
         }
         .forgot-link {
             position: relative;
-            right: 0px !important;
-            text-align: right !important;
+            // right: 0px !important;
+            // text-align: right !important;
+            left: 50%;
+            transform: translateX(-50%);
             margin: 0px;
             color: royalblue;
             padding: 2px;
