--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -379,14 +379,12 @@
         }
         .forgot-link {
             position: relative;
-            // right: 0px !important;
-            // text-align: right !important;
-            left: 50%;
-            transform: translateX(-50%);
+            width: fit-content;
+            left: 50% !important;
+            transform: translateX(-50%) !important;
             margin: 0px;
             color: royalblue;
             padding: 2px;
-            width: fit-content;
             &:hover {
                 text-decoration: underline;
                 cursor: pointer;
