--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -381,7 +381,7 @@
             position: relative;
             width: fit-content;
             left: 50% !important;
-            transform: translateX(-50%) !important;
+            // transform: translateX(-50%) !important;
             margin: 0px;
             color: royalblue;
             padding: 2px;
