--- a/views/mailers/admin/add_admin.ejs
+++ b/views/mailers/admin/add_admin.ejs
@@ -37,7 +37,7 @@
     </div>
     <br />
     <br />
-    <div style="color: greenyellow">
+    <div style="color: #adff2f">
         Now, you can access
         <span style="color: aqua"><%=creatorProfile.name%> (<%=creatorProfile.onModel%>)</span
     >
