--- a/views/mailers/mail_footer.ejs
+++ b/views/mailers/mail_footer.ejs
@@ -4,7 +4,7 @@
         <h3 style="margin-bottom: 5px">Regards</h3>
         <a href="<%=url%>">
             <!-- <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="logo" style="height: 45px; width: 45px; padding-left: 1px" /> -->
-            <img src="<%=url%>/uploads/icons/18.logo.png" alt="logo" style="height: 45px; width: 45px; padding-left: 1px" />
+            <img src="<%=url%>/uploads/icons/cl_logo.jpg" alt="logo" style="height: 45px; width: 45px; padding-left: 1px" />
         </a>
         <br />
         <div style="width: fit-content">
