--- a/views/mailers/mess/menu_change.ejs
+++ b/views/mailers/mess/menu_change.ejs
@@ -18,7 +18,11 @@
                     click on below link to see the new menu
                 </p>
                 <div>
-                    <a href="<%=url%>/user/profile?user_id=<%=obj.by%>"> new menu </a>
+                    Menu Link :
+                    <a style="margin-left: 5px" href="<%=url%>/user/profile?user_id=<%=obj.by%>">
+                 <%=url%>/user/profile?user_id=<%=obj.by%>
+                </a> 
+                   
                 </div>
             </div>
 
