--- a/views/mailers/otp/signUpLink.ejs
+++ b/views/mailers/otp/signUpLink.ejs
@@ -23,7 +23,11 @@
         padding: 10px;
         font-size: 18px;
       ">
-                    <a href="<%=url%><%=signUpLink%>">Link to continue</a>
+                    Link :
+                    <a style="margin-left: 5px" href="<%=url%><%=signUpLink%>">
+                        <%=url%>
+                            <%=signUpLink%>
+                    </a>
                 </div>
 
                 <span>It will be valid for the next
