--- a/views/mailers/member/me_member.ejs
+++ b/views/mailers/member/me_member.ejs
@@ -22,6 +22,15 @@
       <span style="color: aqua">update your cover photo</span> !</sub
     >
   </div>
-  <a href="<%=url%>/user/profile?user_id=<%=data._id%>">Click to see</a>
+  <div>
+    Profile Link :
+    <a
+      style="margin-left: 5px"
+      href="<%=url%>/user/profile?user_id=<%=data._id%>"
+    >
+      <%=url%>/user/profile?user_id=<%=data._id%>
+    </a>
+  </div>
+
   <%-include('../mail_footer');-%>
 </div>
