--- a/views/mailers/otp/forgotPasswordSetLink.ejs
+++ b/views/mailers/otp/forgotPasswordSetLink.ejs
@@ -23,7 +23,11 @@
         padding: 10px;
         font-size: 18px;
       ">
-                    <a href="<%=url%><%=forgotPasswordLink%>">Link to continue</a>
+                    Link :
+                    <a style="margin-left: 5px" href="<%=url%><%=forgotPasswordLink%>">
+                        <%=url%>
+                            <%=forgotPasswordLink%>
+                    </a>
                 </div>
 
                 <span>It will be valid for the next
