--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -61,7 +61,7 @@
         <%if(!post.photos){%>
         type = 'TextPost';
         <%}%>
-        let postId = '<%-post.id%>';
+        let postId = '<%=post.id%>';
 
 
         // //console.log("type is ####################### ",type," post is ",postId);
