--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -76,7 +76,7 @@
     <div class="request-header">
       <div style="width: 100%" id="member-header">Membership</div>
     </div>
-    <div style="display: flex; flex-direction: row">
+    <div style="display: flex; flex-direction: column">
       <%if(locals.myProfile.related.members.length==0){%>
       <div style="color: red; text-align: center; padding: 15px">
         No Member found
@@ -86,7 +86,7 @@
         style="
           width: 100% !important;
           display: flex;
-          flex-direction: column !important;
+          flex-direction: row !important;
           justify-content: space-between !important;
           align-items: space-between !important;
         "
