--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -10,68 +10,82 @@
                 Coming Req
             </div>
         </div>
-        <div>
+        <div style="display: flex; flex-direction: column" class="all coming">
             <%if(locals.myProfile.related.comingRequest.length==0){%>
-                <div class="coming all" style="color: red; text-align: center; padding: 15px">
+                <div style="color: red; text-align: center; padding: 15px">
                     No Coming request found
                 </div>
                 <%}%>
-                    <%for(let u of locals.myProfile.related.comingRequest){%>
-                        <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
-                            <div class="coming all">
-                                <div class="add-on-hover">
+                    <div style="
+          width: 100% !important;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        ">
+                        <%for(let u of locals.myProfile.related.comingRequest){%>
+                            <div>
+                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
                                     <div>
-                                        <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                        <div class="add-on-hover">
+                                            <div>
+                                                <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                            </div>
+                                            <div style="display: flex; flex-direction: column">
+                                                <span><%=u.name%></span>
+                                                <span style="font-size: 13"><%=u.onModel%></span>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div style="display: flex; flex-direction: column">
-                                        <span><%=u.name%></span>
-                                        <span style="font-size: 13"><%=u.onModel%></span>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
-                        </a>
-                        <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
-      >
-      <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
-        ><button>Ignore</button></a
-      >
-    </div>
-    <!-- </div> -->
-    <%}%> <%if(locals.myProfile.related.sendRequest.length==0){%>
-    <div class="send all" style="color: red; text-align: center; padding: 15px">
-      No send request found
-    </div>
-    <%}%> <%for(let u of locals.myProfile.related.sendRequest){%>
-    <div class="send all">
-      <a
-        href="/user/profile?user_id=<%=u.id%>"
-        style="text-decoration: none; color: black"
-      >
-        <div class="add-on-hover">
-          <div>
-            <img
-              src="<%=u.pic%>"
-              alt="pic"
-              height="50px"
-              width="50px"
-              style="border-radius: 50%"
-            />
-          </div>
-          <div style="display: flex; flex-direction: column">
-            <span><%=u.name%></span>
-            <span style="font-size: 13"><%=u.onModel%></span>
-          </div>
+                            <div>
+                                <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
+          >
+          <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
+            ><button>Ignore</button></a
+          >
         </div>
-      </a>
-
-                        <div>
-                            <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
-        >
       </div>
+      <!-- </div> -->
+      <%}%>
     </div>
-    <%}%>
-  </div>
+    <div style="display: flex; flex-direction: column" class="all send">
+      <%if(locals.myProfile.related.sendRequest.length==0){%>
+      <div style="color: red; text-align: center; padding: 15px">
+        No send request found
+      </div>
+      <%}%> <%for(let u of locals.myProfile.related.sendRequest){%>
+      <div>
+        <a
+          href="/user/profile?user_id=<%=u.id%>"
+          style="text-decoration: none; color: black"
+        >
+          <div class="add-on-hover">
+            <div>
+              <img
+                src="<%=u.pic%>"
+                alt="pic"
+                height="50px"
+                width="50px"
+                style="border-radius: 50%"
+              />
+            </div>
+            <div style="display: flex; flex-direction: column">
+              <span><%=u.name%></span>
+              <span style="font-size: 13"><%=u.onModel%></span>
+            </div>
+          </div>
+        </a>
 
+                                <div>
+                                    <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
+          >
+        </div>
+      </div>
+      <%}%>
+    </div>
+  </div>
   <div>
     <div class="request-header">
       <div style="width: 100%" id="member-header">Membership</div>
@@ -112,9 +126,9 @@
               </div>
             </div>
           </a>
-                        </div>
-                        <div>
-                            <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
+                                </div>
+                                <div>
+                                    <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
           >
         </div>
       </div>
