--- a/assets/scss/requests.scss
+++ b/assets/scss/requests.scss
@@ -62,6 +62,7 @@
                 text-align: right;
                 margin: 0px;
                 color: white;
+                box-sizing: border-box;
                 &:hover {
                     // background-color: rgb(40, 40, 134);
                     border-bottom: 2px solid black;
