--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -96,7 +96,7 @@
   </div>
   <div>
     <div class="request-header">
-      <div style="width: 100%" id="member-header">Membership</div>
+      <div style="width: 100%; padding: 5px" id="member-header">Membership</div>
     </div>
     <div style="display: flex; flex-direction: column">
       <%if(locals.myProfile.related.members.length==0){%>
