--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -10,34 +10,78 @@
                 Coming Req
             </div>
         </div>
-        <div style="display: flex; flex-direction: column" class="all coming">
-            <%if(locals.myProfile.related.comingRequest.length==0){%>
+        <div style="display: flex; flex-direction: column" class="all send">
+            <%if(locals.myProfile.related.sendRequest.length==0){%>
                 <div style="color: red; text-align: center; padding: 15px">
-                    No Coming request found
+                    No send request found
                 </div>
                 <%}%>
-                    <div style="
+                    <%for(let u of locals.myProfile.related.sendRequest){%>
+                        <div style="
           width: 100% !important;
           display: flex;
           flex-direction: row !important;
           justify-content: space-between !important;
           align-items: space-between !important;
         ">
-                        <%for(let u of locals.myProfile.related.comingRequest){%>
-                            <div>
-                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                            <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                                <div class="add-on-hover">
                                     <div>
-                                        <div class="add-on-hover">
-                                            <div>
-                                                <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
-                                            </div>
-                                            <div style="display: flex; flex-direction: column">
-                                                <span><%=u.name%></span>
-                                                <span style="font-size: 13"><%=u.onModel%></span>
-                                            </div>
-                                        </div>
+                                        <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
                                     </div>
-                                </a>
+                                    <div style="display: flex; flex-direction: column">
+                                        <span><%=u.name%></span>
+                                        <span style="font-size: 13"><%=u.onModel%></span>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <div>
+                                <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
+          >
+        </div>
+      </div>
+      <%}%>
+    </div>
+    <div style="display: flex; flex-direction: column" class="all coming">
+      <%if(locals.myProfile.related.comingRequest.length==0){%>
+      <div style="color: red; text-align: center; padding: 15px">
+        No Coming request found
+      </div>
+      <%}%>
+      <div
+        style="
+          width: 100% !important;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        "
+      >
+        <%for(let u of locals.myProfile.related.comingRequest){%>
+        <div>
+          <a
+            href="/user/profile?user_id=<%=u.id%>"
+            style="text-decoration: none; color: black"
+          >
+            <div>
+              <div class="add-on-hover">
+                <div>
+                  <img
+                    src="<%=u.pic%>"
+                    alt="pic"
+                    height="50px"
+                    width="50px"
+                    style="border-radius: 50%"
+                  />
+                </div>
+                <div style="display: flex; flex-direction: column">
+                  <span><%=u.name%></span>
+                  <span style="font-size: 13"><%=u.onModel%></span>
+                </div>
+              </div>
+            </div>
+          </a>
                             </div>
                             <div>
                                 <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
@@ -48,49 +92,6 @@
         </div>
       </div>
 
-      <%}%>
-    </div>
-    <div style="display: flex; flex-direction: column" class="all send">
-      <%if(locals.myProfile.related.sendRequest.length==0){%>
-      <div style="color: red; text-align: center; padding: 15px">
-        No send request found
-      </div>
-      <%}%> <%for(let u of locals.myProfile.related.sendRequest){%>
-      <div
-        style="
-          width: 100% !important;
-          display: flex;
-          flex-direction: row !important;
-          justify-content: space-between !important;
-          align-items: space-between !important;
-        "
-      >
-        <a
-          href="/user/profile?user_id=<%=u.id%>"
-          style="text-decoration: none; color: black"
-        >
-          <div class="add-on-hover">
-            <div>
-              <img
-                src="<%=u.pic%>"
-                alt="pic"
-                height="50px"
-                width="50px"
-                style="border-radius: 50%"
-              />
-            </div>
-            <div style="display: flex; flex-direction: column">
-              <span><%=u.name%></span>
-              <span style="font-size: 13"><%=u.onModel%></span>
-            </div>
-          </div>
-        </a>
-
-                                <div>
-                                    <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
-          >
-        </div>
-      </div>
       <%}%>
     </div>
   </div>
@@ -134,9 +135,9 @@
               </div>
             </div>
           </a>
-                                </div>
-                                <div>
-                                    <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
           >
         </div>
       </div>
