--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -3,20 +3,15 @@
 <div id="requests-container">
     <div>
         <div class="request-header">
-            <div id="send-header" type="send" class="header" onClick="toggleHead('send-header')">
-                Requested
-            </div>
-            <div id="coming-header" type="coming" class="header" onClick="toggleHead('coming-header')">
-                Coming Req
-            </div>
+            <div style="width: 100%; padding: 5px" id="member-header">Membership</div>
         </div>
-        <div style="display: flex; flex-direction: column" class="all send">
-            <%if(locals.myProfile.related.sendRequest.length==0){%>
+        <div style="display: flex; flex-direction: column">
+            <%if(locals.myProfile.related.members.length==0){%>
                 <div style="color: red; text-align: center; padding: 15px">
-                    No send request found
+                    No Member found
                 </div>
                 <%}%>
-                    <%for(let u of locals.myProfile.related.sendRequest){%>
+                    <%for(let u of locals.myProfile.related.members){%>
                         <div style="
           width: 100% !important;
           display: flex;
@@ -24,117 +19,18 @@
           justify-content: space-between !important;
           align-items: space-between !important;
         ">
-                            <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
-                                <div class="add-on-hover">
-                                    <div>
-                                        <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
-                                    </div>
-                                    <div style="display: flex; flex-direction: column">
-                                        <span><%=u.name%></span>
-                                        <span style="font-size: 13"><%=u.onModel%></span>
-                                    </div>
-                                </div>
-                            </a>
-
                             <div>
-                                <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
-          >
-        </div>
-      </div>
-      <%}%>
-    </div>
-    <div style="display: flex; flex-direction: column" class="all coming">
-      <%if(locals.myProfile.related.comingRequest.length==0){%>
-      <div style="color: red; text-align: center; padding: 15px">
-        No Coming request found
-      </div>
-      <%}%>
-      <div
-        style="
-          width: 100% !important;
-          display: flex;
-          flex-direction: row !important;
-          justify-content: space-between !important;
-          align-items: space-between !important;
-        "
-      >
-        <%for(let u of locals.myProfile.related.comingRequest){%>
-        <div>
-          <a
-            href="/user/profile?user_id=<%=u.id%>"
-            style="text-decoration: none; color: black"
-          >
-            <div>
-              <div class="add-on-hover">
-                <div>
-                  <img
-                    src="<%=u.pic%>"
-                    alt="pic"
-                    height="50px"
-                    width="50px"
-                    style="border-radius: 50%"
-                  />
-                </div>
-                <div style="display: flex; flex-direction: column">
-                  <span><%=u.name%></span>
-                  <span style="font-size: 13"><%=u.onModel%></span>
-                </div>
-              </div>
-            </div>
-          </a>
-                            </div>
-                            <div>
-                                <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
-          >
-          <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
-            ><button>Ignore</button></a
-          >
-        </div>
-      </div>
-
-      <%}%>
-    </div>
-  </div>
-  <div>
-    <div class="request-header">
-      <div style="width: 100%; padding: 5px" id="member-header">Membership</div>
-    </div>
-    <div style="display: flex; flex-direction: column">
-      <%if(locals.myProfile.related.members.length==0){%>
-      <div style="color: red; text-align: center; padding: 15px">
-        No Member found
-      </div>
-      <%}%> <%for(let u of locals.myProfile.related.members){%>
-      <div
-        style="
-          width: 100% !important;
-          display: flex;
-          flex-direction: row !important;
-          justify-content: space-between !important;
-          align-items: space-between !important;
-        "
-      >
-        <div>
-          <a
-            href="/user/profile?user_id=<%=u.id%>"
-            style="text-decoration: none; color: black"
-          >
-            <div class="add-on-hover">
-              <div>
-                <img
-                  src="<%=u.pic%>"
-                  alt="pic"
-                  height="50px"
-                  width="50px"
-                  style="border-radius: 50%"
-                />
-              </div>
-              <div style="display: flex; flex-direction: column">
-                <span><%=u.name%></span>
-                <span style="font-size: 13"><%=u.onModel%></span>
-              </div>
-            </div>
-          </a>
+                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                                    <div class="add-on-hover">
+                                        <div>
+                                            <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                        </div>
+                                        <div style="display: flex; flex-direction: column">
+                                            <span><%=u.name%></span>
+                                            <span style="font-size: 13"><%=u.onModel%></span>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
                             <div>
                                 <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
