--- a/assets/scss/requests.scss
+++ b/assets/scss/requests.scss
@@ -51,29 +51,6 @@
                 }
             }
         }
-        .request-header {
-            flex-direction: row;
-            background-color: #77d6cd;
-            div {
-                background-color: inherit;
-                align-items: center;
-                justify-content: center;
-                width: 50%;
-                text-align: right;
-                margin: 0px;
-                color: white;
-                box-sizing: border-box;
-                &:hover {
-                    // background-color: rgb(40, 40, 134);
-                    border-bottom: 2px solid black;
-                }
-            }
-            #member-header {
-                &:hover {
-                    border-bottom: none;
-                }
-            }
-        }
     }
 }
 
@@ -82,6 +59,31 @@
         img {
             transition: all 0.6s;
             border: 2.5px solid cyan;
+        }
+    }
+}
+
+.request-header {
+    display: flex;
+    flex-direction: row;
+    background-color: #77d6cd;
+    div {
+        background-color: inherit;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+        text-align: right;
+        margin: 0px;
+        color: white;
+        box-sizing: border-box;
+        &:hover {
+            // background-color: rgb(40, 40, 134);
+            border-bottom: 2px solid black;
+        }
+    }
+    #member-header {
+        &:hover {
+            border-bottom: none;
         }
     }
 }
