--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="<%=assetPath('css/requests.css')%>" />
 
-<div id="requests-container">
+<div class="requests-container">
     <div class="request-header">
         <div id="send-header" type="send" class="header" onClick="toggleHead('send-header')">
             Requested
@@ -95,7 +95,9 @@
 
   <div style="display: flex; flex-direction: column">
     <div class="request-header">
-      <div style="width: 100%; padding: 5px" id="member-header">Membership</div>
+      <div style="width: 100%; padding: 5px" class="member-header">
+        Membership
+      </div>
     </div>
     <div style="display: flex; flex-direction: column">
       <%if(locals.myProfile.related.members.length==0){%>
