--- a/assets/scss/requests.scss
+++ b/assets/scss/requests.scss
@@ -51,6 +51,28 @@
                 }
             }
         }
+        .request-header {
+            flex-direction: row;
+            background-color: #77d6cd;
+            div {
+                background-color: inherit;
+                align-items: center;
+                justify-content: center;
+                width: 50%;
+                text-align: right;
+                margin: 0px;
+                color: white;
+                &:hover {
+                    // background-color: rgb(40, 40, 134);
+                    border-bottom: 2px solid black;
+                }
+            }
+            #member-header {
+                &:hover {
+                    border-bottom: none;
+                }
+            }
+        }
     }
 }
 
@@ -59,31 +81,6 @@
         img {
             transition: all 0.6s;
             border: 2.5px solid cyan;
-        }
-    }
-}
-
-#request-header {
-    display: flex !important;
-    flex-direction: row !important;
-    background-color: #77d6cd !important;
-    div {
-        background-color: inherit !important;
-        align-items: center !important;
-        justify-content: center !important;
-        width: 50% !important;
-        text-align: right !important;
-        margin: 0px !important;
-        color: white !important;
-        box-sizing: border-box !important;
-        &:hover {
-            // background-color: rgb(40, 40, 134);
-            border-bottom: 2px solid black !important;
-        }
-    }
-    #member-header {
-        &:hover {
-            border-bottom: none !important;
         }
     }
 }
