--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -12,24 +12,16 @@
                 Coming Req
             </div>
         </div>
-    </div>
 
-    <div style="width: 100%">
-        <div class="request-header">
-            <div style="width: 100%" id="member-header">Membership</div>
-        </div>
-        <div style="
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-      ">
-            <%if(locals.myProfile.related.members.length==0){%>
+        <!-- sending-request-div -->
+
+        <div class="send all" style="display: flex; flex-direction: column">
+            <%if(locals.myProfile.related.sendRequest.length==0){%>
                 <div style="color: red; text-align: center; padding: 15px">
-                    No Member found
+                    No send request found
                 </div>
                 <%}%>
-                    <%for(let u of locals.myProfile.related.members){%>
+                    <%for(let u of locals.myProfile.related.sendRequest){%>
                         <div style="
           width: 100%;
           display: flex;
@@ -49,6 +41,63 @@
                                         </div>
                                     </div>
                                 </a>
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
+          >
+        </div>
+      </div>
+      <%}%>
+    </div>
+  </div>
+
+  <div style="width: 100%">
+    <div class="request-header">
+      <div style="width: 100%" id="member-header">Membership</div>
+    </div>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+      "
+    >
+      <%if(locals.myProfile.related.members.length==0){%>
+      <div style="color: red; text-align: center; padding: 15px">
+        No Member found
+      </div>
+      <%}%> <%for(let u of locals.myProfile.related.members){%>
+      <div
+        style="
+          width: 100%;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        "
+      >
+        <div>
+          <a
+            href="/user/profile?user_id=<%=u.id%>"
+            style="text-decoration: none; color: black"
+          >
+            <div class="add-on-hover">
+              <div>
+                <img
+                  src="<%=u.pic%>"
+                  alt="pic"
+                  height="50px"
+                  width="50px"
+                  style="border-radius: 50%"
+                />
+              </div>
+              <div style="display: flex; flex-direction: column">
+                <span><%=u.name%></span>
+                <span style="font-size: 13"><%=u.onModel%></span>
+              </div>
+            </div>
+          </a>
                             </div>
                             <div>
                                 <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
@@ -98,41 +147,5 @@
         </div> -->
 
 <!-- sending al -->
-<!-- 
-        
-        <div class="send all">
-            <%if(locals.myProfile.related.sendRequest.length==0){%>
-                <div style="color: red; text-align: center; padding: 15px">
-                    No send request found
-                </div>
-                <%}%>
-                    <%for(let u of locals.myProfile.related.sendRequest){%>
-                        <div style="
-          width: 100%;
-          display: flex;
-          flex-direction: row !important;
-          justify-content: space-between !important;
-          align-items: space-between !important;
-        ">
-                            <div>
-                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
-                                    <div class="add-on-hover">
-                                        <div>
-                                            <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
-                                        </div>
-                                        <div style="display: flex; flex-direction: column">
-                                            <span><%=u.name%></span>
-                                            <span style="font-size: 13"><%=u.onModel%></span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div>
-                                <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
-          >
-        </div>
-      </div>
-      <%}%>
-    </div> -->
 
 <!-- header -->
