--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -49,6 +49,41 @@
       </div>
       <%}%>
     </div>
+    <!-- coming requests -->
+    <div class="coming all" style="display: flex; flex-direction: column">
+            <%if(locals.myProfile.related.comingRequest.length==0){%>
+                <div style="color: red; text-align: center; padding: 15px">
+                    No Coming request found
+                </div>
+                <%}%>
+                    <%for(let u of locals.myProfile.related.comingRequest){%>
+                        <div style=" width: 100%;  display: flex;  flex-direction: row !important; justify-content: space-between !important; align-items: space-between !important;">
+                            <div>
+                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                                    <div>
+                                        <div class="add-on-hover">
+                                            <div>
+                                                <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                            </div>
+                                            <div style="display: flex; flex-direction: column">
+                                                <span><%=u.name%></span>
+                                                <span style="font-size: 13"><%=u.onModel%></span>
+                                            </div>
+                                        </div>
+                                        <div>
+                                </a>
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
+          >
+          <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
+            ><button>Ignore</button></a
+          >
+          </div>
+          </div>
+           <%}%>
+        </div>
+
   </div>
 
   <div style="width: 100%">
@@ -112,39 +147,7 @@
 <script src="<%=assetPath('js/requests.js')%>"></script>
 
 <!-- coming all -->
-<!-- <div class="coming all">
-            <%if(locals.myProfile.related.comingRequest.length==0){%>
-                <div style="color: red; text-align: center; padding: 15px">
-                    No Coming request found
-                </div>
-                <%}%>
-                    <%for(let u of locals.myProfile.related.comingRequest){%>
-                        <div style=" width: 100%;  display: flex;  flex-direction: row !important; justify-content: space-between !important; align-items: space-between !important;">
-                            <div>
-                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
-                                    <div>
-                                        <div class="add-on-hover">
-                                            <div>
-                                                <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
-                                            </div>
-                                            <div style="display: flex; flex-direction: column">
-                                                <span><%=u.name%></span>
-                                                <span style="font-size: 13"><%=u.onModel%></span>
-                                            </div>
-                                        </div>
-                                        <div>
-                                </a>
-                            </div>
-                            <div>
-                                <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
-          >
-          <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
-            ><button>Ignore</button></a
-          >
-          </div>
-          </div>
-           <%}%>
-        </div> -->
+
 
 <!-- sending al -->
 
