--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -57,7 +57,13 @@
                 </div>
                 <%}%>
                     <%for(let u of locals.myProfile.related.comingRequest){%>
-                        <div style=" width: 100%;  display: flex;  flex-direction: row !important; justify-content: space-between !important; align-items: space-between !important;">
+                        <div style="
+          width: 100%;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        ">
                             <div>
                                 <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
                                     <div>
@@ -70,7 +76,7 @@
                                                 <span style="font-size: 13"><%=u.onModel%></span>
                                             </div>
                                         </div>
-                                        <div>
+                                        
                                 </a>
                             </div>
                             <div>
